# MidnightChessEngine

./: .gitignore  .test.sh.swp  CMakeLists.txt  LICENSE  Makefile  ReadMe.md  changelog.md  changelog.txt  main.cpp  midnight  midnight-tests  midnight-tune  pretty-eval-printer.py  sprt.sh  test.sh
.midnight_run/: Midnight.run.xml
.midnight_tests_run/: MidnightTests.run.xml
.midnight_tune_run/: MidnightTune.run.xml
ChessEngine/: CMakeLists.txt  main.cpp
ChessEngine/ChessEngine_lib/: CMakeLists.txt  clock.cpp  clock.h  constants.h  engine_uci_inputs_diagnostics.txt  helpers.cpp  helpers.h  uci_input.txt  uci_output.txt
ChessEngine/ChessEngine_lib/data_structures/: ReadMe.md
ChessEngine/ChessEngine_lib/evaluation/: eval_constants.h  evaluate.cpp  evaluate.h  pawn.h  piece_square_tables.h  types.h
ChessEngine/ChessEngine_lib/evaluation/pieces/: bishop.h  king.h  knight.h  pawn.h  queen.h  rook.h
ChessEngine/ChessEngine_lib/move_generation/: position.cpp  position.h  tables.cpp  tables.h  types.cpp  types.h
ChessEngine/ChessEngine_lib/move_search/: alphabeta.h  id.h  lmr_table.cpp  lmr_table.h  move_ordering.h  pv_table.h  pvs.h  search.h  search_params.h  transposition_table.cpp  transposition_table.h
ChessEngine/ChessEngine_lib/move_search/move_ordering/: history_table.h  move_ordering.h  ordering_constants.h
ChessEngine/ChessEngine_lib/uci_interpreter/: parse_uci_move.h  time_manager.h  uci_interpreter.h
ChessEngine/ChessEngine_tests/: AbsoluteDateTest.cpp  CMakeLists.txt  ConverterTests.cpp  EvaluationTests.cpp  MoveSearchTests.cpp
ChessEngine/ChessEngine_tests/MoveGenerationTests/: MoveGenerationHashHistoryTests.cpp  MoveGenerationOptionsTests.cpp  MoveGenerationPerft.cpp  MoveGenerationPerftDefaultFenTest.cpp  MoveGenerationZobristHastTests.cpp  perft_results.txt
ChessEngine/ChessEngine_tests/cutechess_tests/latest_master/: master
ChessEngine/ChessEngine_tests/cutechess_tests/test_1/: 250games.pgn  master  tournament_results.txt
ChessEngine/ChessEngine_tests/cutechess_tests/test_2/: hashing_test_2000.pgn  tournament_results.txt
ChessEngine/ChessEngine_tests/lib/googlemock/docs/: cook_book.md  for_dummies.md
ChessEngine/ChessEngine_tests/lib/googletest/cmake/: internal_utils.cmake
ChessEngine/ChessEngine_tests/lib/googletest/docs/: faq.md  primer.md
ChessEngine/ChessEngine_tests/lib/googletest/include/gtest/: gtest-printers.h
ChessEngine/ChessEngine_tests/lib/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-port.h
ChessEngine/ChessEngine_tests/lib/googletest/src/: gtest-port.cc  gtest.cc
ChessEngine_tests/: MoveOrderingTests.cpp
run_configs/.midnight_tune_run/: MidnightTune.run.xml
src/: CMakeLists.txt  clock.h  constants.h  engine.cpp  engine.h  engine_uci_inputs_diagnostics.txt  example.txt  main.cpp  tuner.cpp  types.h
src/board/: position.cpp  position.h
src/board/constants/: board_masks.h  misc_constants.h  zobrist_constants.h
src/board/types/: bitboard.cpp  bitboard.h  board_types.h  piece.h  square.h
src/evaluation/: bitboards.h  eval_constants.h  evaluate.cpp  evaluate.h  net006.nnue  netM001.nnue  netM002.nnue  netM003.nnue  netM004.nnue  netM005.nnue  netM006.nnue  simd.h  types.h
src/evaluation/constants/: constants.h  misc.h  psts.h
src/evaluation/pieces/: bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  queen.cpp  queen.h  rook.cpp  rook.h
src/evaluation/texel-tuner/: base.h  midnight.cpp  midnight.h  tuner.h
src/gui/: board.cpp  board.h  frame.cpp  frame.h  main.cpp  main.h  panel.cpp  panel.h  piece.cpp  piece.h  symbol.cpp  symbol.h
src/move_gen/: move_gen_masks.h  move_generator.h
src/move_gen/tables/: attack_tables.h  square_tables.h
src/move_gen/types/: move.h  types.h
src/move_generation/: position.cpp  position.h  tables.cpp  tables.h  types.cpp  types.h
src/move_search/: alphabeta.h  extensions.h  id.h  lmr_table.h  move_ordering.h  pruning.cpp  pruning.h  pvs.cpp  pvs.h  reductions.cpp  reductions.h  search.cpp  search.h  search_constants.h  search_params.h  transposition_table.h  types.cpp  types.h
src/move_search/move_ordering/: history_table.h  move_ordering.cpp  move_ordering.h  ordering_constants.h
src/move_search/tables/: history_table.cpp  history_table.h  lmr_table.cpp  lmr_table.h  pv_table.h  transposition_table.cpp  transposition_table.h
src/uci_interpreter/: bench_fens.h  datagen.cpp  datagen.h  parse_uci_move.h  time_manager.cpp  time_manager.h  uci_interpreter.cpp  uci_interpreter.h  uci_move_parse.cpp  uci_move_parse.h
src/utils/: clock.cpp  clock.h  fen_constants.h  helpers.cpp  helpers.h  stack.h
tests/: CMakeLists.txt  MoveSearchTests.cpp  attacks.cpp  attacks.txt  bench_eval.cpp  board-rep.cpp  eval.cpp  hash.cpp  main.cpp  move_ordering.cpp  perft.cpp  perft_results.txt  stack.cpp
tests/MoveGenerationTests/: MoveGenerationHashHistoryTests.cpp  MoveGenerationOptionsTests.cpp  MoveGenerationPerft.cpp  MoveGenerationZobristHastTests.cpp
tests/lib/: .gitignore  README.md  doctests.h
tests/lib/googlemock/docs/: gmock_faq.md
tests/lib/googletest/: README.md
tests/lib/googletest/docs/: advanced.md  primer.md
tests/lib/googletest/include/gtest/: gtest-death-test.h  gtest-printers.h
tests/lib/googletest/src/: gtest-death-test.cc
tests/move-gen-tests/: MoveGenerationOptionsTests.cpp  MoveGenerationPerft.cpp  MoveGenerationZobristHastTests.cpp  move-gen-options.cpp  perft.cpp  zobrist.cpp
texel-tuner/: base.h  config.h  helper.h  midnight.cpp  midnight.h  sources.csv  threadpool.cpp  threadpool.h  tune_main.cpp  tuner.cpp  tuner.h
uci-gui/src/: app.py  test.py
uci-gui/src/static/js/: chess.js
uci-gui/src/templates/: bbc.html
